--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html {
   background: #f5f7f8;
   font-family: "Roboto", sans-serif;
@@ -12,32 +11,8 @@ html {
   margin: 0;
   padding: 0;
 }
-.write {
-}
-.card {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  border: 4px green solid;
-  border-radius: 16px;
-}
 
-.header {
-  height: 30%;
-  background: green;
-  border-radius: 16px;
-  color: white;
-  text-align: center;
-  font-weight: bold;
-}
-
-.containerCard {
-  width: 250px;
-  max-width: 80%;
-}
 button {
-  background: #fff;
-  box-shadow: 0px 0px 0px transparent;
-  border: 0px solid transparent;
-  text-shadow: 0px 0px 0px transparent;
+  padding: 8px;
+  margin: 8px;
 }
